--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
         .btn:hover {
             background-color: #45a049;
         }
+        .btn-disabled {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 10px 20px;
+            background-color: grey;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: not-allowed;
+            font-size: 16px;
+            text-decoration: none;
+        }
         .image-container {
             margin-top: 20px;
         }
@@ -75,8 +87,8 @@
         <p class="message">Hola ING Yolanda Potosi,</p>
         <p class="message">¿Recuerdas que hace unos meses te mencioné que tenía una invitación especial antes de que terminara el año? Es para el 28 de diciembre. ¿Te gustaría acompañarme?</p>
         <a class="btn" href="https://wa.me/3142234168?text=¡Hola!%20Me%20encantaría%20acompañarte." target="_blank">Confirmar Asistencia</a>
-        <a class="btn" href="https://wa.me/3142234168?text=Gracias%20por%20la%20invitación,%20pero%20no%20puedo%20asistir." target="_blank">No Puedo Asistir</a>
-        <p class="message">ATT:ING MAURICIO  DESARROLLADOR DE SOFTWARE </p>
+        <a class="btn-disabled">No Puedo Asistir</a>
+        <p class="message">ATT: ING MAURICIO, DESARROLLADOR DE SOFTWARE</p>
     </div>
 </body>
 </html>
